# picoLCD

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  TODO  autogen.sh  config.h  configure.in  description-pak  libtool
doc/: HIDmessages.rtf  font.txt  hid-usblcd-tree.txt  ir_data_decode.c  libusblcd-development-guide.txt  picolcd-256x64-protocol-rev3.txt  splash.txt  splash2.txt  usblcd-client-guide.txt
doc/examples/bash/: free-space.sh  idle-cpu.sh  lcdstats.sh
doc/examples/bigfonts/: font-minibox.1  font-minibox.2  font-minibox.3  font-minibox.4  font-minibox.5  globe.fnt  mail.fnt  minibox-logo.fnt
doc/examples/picoLCD-256x64/: gksu  picolcd-wrapper.sh  start-picolcd256x64-mrtg.sh  start-picolcd256x64-rss.sh  start-picolcd256x64.sh
doc/examples/picoLCD-256x64/Configs/: lcd4linux.conf.mrtg.x11  lcd4linux.conf.orig  lcd4linux.conf.rss.x11
include/: cbuffer.h  debug.h  driver.h  picolcd-common.h  picolcd-util.h  picolcd.h  rc5.h  util.h  widgets.h
kext/: README.md
lib/: Makefile.am  cbuffer.c  hid.c  picolcd-20x2.c  picolcd-20x4.c  picolcd-256x64.c  picolcd-common.c  picolcd.c  rc5.c  util.c  widgets.c
patches/: picoLCD20x2-lcd4linux.patch  picoLCD20x2-lcdproc.patch  picoLCD20x4-lcdproc.patch  picoLCD256x64-lcd4linux.patch
patches/256x64-kernel-driver/: [PATCH_v6_1_8]_hid__new_driver_for_PicoLCD_device  [PATCH_v6_2_8]_hid__add_framebuffer_support_to_PicoLCD_device  [PATCH_v6_3_8]_hid__add_backlight_support_to_PicoLCD_device  [PATCH_v6_4_8]_hid__add_lcd_support_to_PicoLCD_device  [PATCH_v6_5_8]_hid__add_GPO__leds__support_to_PicoLCD_device  [PATCH_v6_6_8]_hid__add_experimental_access_to_PicoLCD_device_s_EEPROM_and_FLASH  [PATCH_v6_7_8,_needs_improvement]_hid__add_suspend_resume_hooks_for_hid_drivers  [PATCH_v6_8_8]_hid__add_PM_support_to_PicoLCD_device
pkgconfig/: libpicolcd.pc  libpicolcd.pc.in
src/: Makefile.am  cpu.c  main.c  picolcd-util.c  picolcdboot-main.c
tools/hid-tests/: libhid-test.c  libusb_augment.c  libusb_augment.h  usblcd-gen.c  usbsnoop2libusb.pl
tools/xpmtofnt/: globe.xpm  mail.xpm  mini-box-logo.xpm  minibox-text.xpm  xpm2fnt.c
ubuntu-package/debian/: README.Debian  changelog  control  copyright  files  lcdproc.LCDd.init  lcdproc.install  lcdproc.postinst.debhelper  lcdproc.postrm.debhelper  lcdproc.prerm.debhelper  rules
ubuntu-package/debian/patches/: 00list  01_picoLCD_config.dpatch
(+4 files in other folders)
